--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -148,7 +148,7 @@ pam_service_name=vsftpd
 # encrypted connections.
 rsa_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
 rsa_private_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
-ssl_enable=NO
+ssl_enable=YES
 
 #
 # Uncomment this to indicate that vsftpd use a utf8 filesystem.
